# rtkgps_odom_matcher

./: CMakeLists.txt  package.xml
include/: matcher.h  movingAverageFiltered.h  odomDataStore.h
include/libicp/: icp.h  matrix.h
launch/: matcher.launch
params/: matcher.yaml
src/: matcher.cpp  matcher_node.cpp  movingAverageFiltered.cpp  odomDataStore.cpp  odomDataStore.test.cpp
src/libicp/: icp.cpp  icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp  matrix.cpp
tests/: odomDataStore.test.cpp
