<?xml version="1.0"?>
<package>
  <name>rtkgps_odom_matcher</name>
  <version>1.0.0</version>
  <description>
    Calculate and broadcast static transformation between RTK GPS odometry and wheel odometry in absence of a magnetometer.
  </description>

  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>